--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@expo-google-fonts/asap": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.5",
     "expo-blur": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-svg-transformer": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
