--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -13,6 +13,9 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@shopify/react-native-skia": "^1.2.3",
+    "@wuba/react-native-echarts": "^1.3.1",
+    "echarts": "^5.5.0",
     "expo": "~51.0.5",
     "expo-blur": "~13.0.2",
     "expo-status-bar": "~1.12.1",
