--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "echarts": "^5.5.0",
     "expo": "~51.0.5",
     "expo-blur": "~13.0.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-picker-select": "^9.1.3",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.2.0",
-    "react-native-svg-transformer": "^1.4.0",
-    "expo-linear-gradient": "~13.0.2"
+    "react-native-svg-transformer": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
